fix settings head in dark mode

--- a/src/scss/theme/dark/popup.scss
+++ b/src/scss/theme/dark/popup.scss
@@ -34,8 +34,8 @@
 			}
 
 			> .side.right {
-				.head { background: $colorBlack; }
 				.head {
+					.inner { background: $colorBlack; }
 					.element:hover { background-color: $colorHoverMedium; }
 				}
 
